# $Id$ #

Oinkmaster v1.2 - 200xxxxx
~~~~~~~~~~~~~~~~~~~~~~~~~~
o Slightly improved modifysid/template documentation and examples.
  For example, added a new template to disable a SID but only if
  it has a specific revision number, so you can disable a rule
  temporarily and automatically start using it again if it becomes
  updated. Thanks to Russell Fulton for this suggestion.



Oinkmaster v1.1 - 20041009
~~~~~~~~~~~~~~~~~~~~~~~~~~
o Support template-based modifysid expressions so you can define a 
  template once and then use that one instead of repeating complex 
  modifysid expressions. Documentation for this is found in 
  README.templates and usage examples is found in template-examples.conf.
o New option -s for summarized output (aka bmc mode) to leave out the
  details when printing results for added/removed/modified rules.
  Only the sid and msg string of the rules are printed, plus the
  filename. Non-rule changes are printed as usual.
o New option -m to minimize/simplify the resulting output for modified
  rules. This means that identical leading and trailing parts of the
  new and old rule are removed so the actual change is much easier to
  see. Some characters to the left and right of the diffing parts
  are kept to get some context. More information and example output can
  be found in the updated manual page (oinkmaster.1).
o Support -s and -m in the GUI as well (the "diff mode" buttons)
o Better handling of duplicate rules (i.e. rules with the same SID) for
  files in the downloaded archive:
  - If all the duplicates are disabled, only one of them is passed on to 
    the local rules file
  - If one of the rules is enabled and the other one disabled, the
    disabled one is discarded
  - If both rules are active, the one with the highest 'rev' is used
  - If one of the rules has a rev and the other does not, the one with
    the rev is used
  - If the duplicate rules have the same rev, the one appearing last 
    in the file is used